# paired

./: arguments.py  draw_graph.py  eval.py  multi_rllib.py  out.txt  out_offense.txt  out_offense_v1.txt  out_offense_v2.txt  out_offense_v2_long.txt  output_log.out  pyproject.toml  requirements.txt  run_train.bash  safe_table.csv  test_verifai.py  train.py
algos/: storage.py
envs/: __init__.py  registration.py
envs/gfootball/: __init__.py  adversarial.py  register.py  scenicenv.py
envs/runners/: adversarial_runner.py
envs/wrappers/: parallel_wrappers.py  vec_normalize.py
models/: __init__.py  common.py  distributions.py  gfootball_models.py  gfootball_models_simple.py
scenic_scenarios/: 1v1.scenic  1v1_free.scenic  1v1_test0.scenic  1v1_test1.scenic  1v1_test2.scenic  3v2.scenic  3v2_test0.scenic  3v2_test1.scenic  3v2_test2.scenic  3v2_test3.scenic  choose_passing.scenic  choose_passing_test0.scenic  choose_passing_test1.scenic
train_scripts/: train_gf.sh
util/: __init__.py  make_agent.py
