[tool.poetry]
name = "paired"
version = "0.1.0"
description = ""
authors = ["Edward Kim <ek65@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
scenic = {path="../scenic4rl"}
verifai = {path="../VerifAI"}

#verifai = "^2.0.0-beta.1"
minihack = "^0.1.1"
gfootball = "^2.10.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
